feat: services and controllers for main models
