# bookback/internal/servers/http/controllers/health/controller.go
@@ -23,15 +23,14 @@ func (hc *healthController) RegisterRoutes(e *echo.Echo, _ context.Context) {
 	e.GET("/api/v1/health", hc.GetHealthCheck)
 }
 
-// GetHealthCheck returns whether this application is alive or not.
-// @Summary Get the status of this application
-// @Description Get the status of this application
-// @Tags Health
-// @Accept  json
-// @Produce  json
-// @Success 200 {string} message "healthy: This application is started."
-// @Failure 404 {string} message "None: This application is stopped."
-// @Router /health [get]
+// GetHealthCheck возвращает статус приложения.
+// @router /health [get]
+// @summary Получить статус приложения
+// @description Возвращает статус приложения
+// @tags Статус приложения
+// @produce  application/json
+// @success 200 {string} string "healthy"
+// @failure 500 {object} config.HTTPError
 func (hc *healthController) GetHealthCheck(c echo.Context) error {
 	return c.JSON(http.StatusOK, "healthy")
 }
